[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = ["Krunal Dodiya <kunal.dodiya1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
bcrypt = "^4.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
